needs to be truer

--- a/index.html
+++ b/index.html
@@ -13,7 +13,8 @@
 <!-- reuse it, subvert it, sell it, print it out, ball it up and throw it at republicans.    -->
 <!-- it makes no difference to me! just don't be a dick, k? thx!!                            -->
 <!--------------------------------------------------------------------------------------------->
-<meta charset="UTF-8">
+<meta charset="UTF-8"/>
+<meta name="description" content="With WhatIsMyGender.com's random gender generator, you will always have an answer to the question, 'What is my gender?'"/>
 <title>What is my gender?</title>
 <script>
 
@@ -21,7 +22,7 @@ var prefixes = ["poly", "demi", "anarcho", "spirono", "quasi", "midi", "xeno", "
                     "rebyl", "rebel", "femme-", "pan", "meta-", "post-", "dis", "anti", "contra-",
                     "space-", "femina-", "neutra-", "masculo", "masclo", "mysterio", "pacifi", "atlanti",
                     "antarcti", "arcto", "ecto", "eu", "arachno", "uni", "duo", "tri", "dys",
-                    "outer", "exo"]
+                    "exo"]
 
 var middles = ["girl", "boy", "gyrl", "boi", "queery", "chic", "grrl", "robot", "golem", "neuter", 
                "third", "boygirl", "girlboy", "birl", "man", "jenner", "sex", "being", "human", "alien", 
@@ -30,7 +31,7 @@ var middles = ["girl", "boy", "gyrl", "boi", "queery", "chic", "grrl", "robot", 
 
 var finals = ["core", "³", "dax", "piece", "god", "goddess", "thing", "growl", "wizard", "witch", "++",
                   "person", "muse", "mage", "doo", "majig", "bit", "stream", "personthing", "beast",
-                  "queer", "chlorian", "kin", "kid", "dish"]
+                  "queer", "chlorian", "kin", "kid", "dish", "corn", "phoria"]
 
 function generateGender() {
 
