--- a/index.html
+++ b/index.html
@@ -1,6 +1,8 @@
 <!DOCTYPE html>
 <html>
 <head>
+<meta charset="UTF-8"/>
+<meta name="description" content="New and improved. Have you ever wished someone would tell you what your gender really is? We have The Answer."/>
 <!--------------------------------------------------------------------------------------------->
 <!-- oh hai... sorry, i'm not nearly trutrans enough for this to be good code.               -->
 <!--------------------------------------------------------------------------------------------->
@@ -13,55 +15,38 @@
 <!-- reuse it, subvert it, sell it, print it out, ball it up and throw it at republicans.    -->
 <!-- it makes no difference to me! just don't be a dick, k? thx!!                            -->
 <!--------------------------------------------------------------------------------------------->
-<meta charset="UTF-8"/>
-<meta name="description" content="With WhatIsMyGender.com's random gender generator, you will always have an answer to the question, 'What is my gender?'"/>
-<title>What is my gender?</title>
+<title>What is my gender? 2.0</title>
 <script>
 
-var prefixes = ["poly", "demi", "anarcho", "spirono", "quasi", "midi", "xeno", "auto", "presto",
-                    "rebyl", "rebel", "femme", "pan", "meta", "post", "dis", "anti", "contra",
-                    "space", "femina", "neutra", "masculo", "man", "mysterio", "pacifi", "atlanti",
-                    "antarcti", "arcto", "ecto", "eu", "arachno", "uni", "duo", "tri", "dys",
-                    "exo", "sappho", "dendro", "trans", "seismo"]
+var prefixes = ["the sea", "a fish", "the laughter", "the giant squid", "the tomato", "a candlestick",
+                "a butterdish", "the butterdish", "an author of science fiction novels",
+                "the american novel", "the bard", "a cucumber", "the neighbor", "a god", "the goddess",
+                "a cat", "the dog", "a swarm of eyeballs", "a bee", "a beehive", "a pack of twelve artists",
+                "the source code of this document", "a piece of toast", "a stick of vegan butter",
+                "the website", "a website", "a canoe"]
 
-var middles = ["girl", "boy", "gyrl", "boi", "queery", "chic", "grrl", "robot", "golem", "neuter", 
-               "third", "boygirl", "girlboy", "birl", "male", "jenner", "sex", "being", "human", 
-               "extraterrestrial", "extragender", "genderless", "gender", "pan", "trill", "womyn", "cool", 
-               "quirl", "squirtle", "meow", "butter", "female", "man"]
+var middles = ["laughing", "dancing", "eating christmas ornaments", "drinking wine", "writing a poem",
+               "writing a novel", "learning to dance", "learning to fly", "drinking melted ice cream",
+               "opposing Stalin", "starting an insurrection", "waiting tables", "cooking seitan", "starving",
+               "holding a can of beans", "hysterically laughing", "that drinks", "that smells success",
+               "that has been chosen", "that watched your mother's television", "that never called me",
+               "that brushes dogs", "that wanders into supermarkets", "that stands for the letter Z"]
 
-var finals = ["core", "³", "dax", "piece", "god", "goddess", "thing", "growl", "wizard", "witch", "++",
-                  "person", "muse", "mage", "doo", "majig", "bit", "stream", "personthing", "beast",
-                  "queer", "chlorian", "kin", "kid", "dish", "corn", "phoria", "*", "hound"]
+var finals = ["to the core", "in France", "in the dark", "when nobody is looking", "when no one else will",
+              "in order to personify the laughter of hyenas", "when the world is young", "when planets die",
+              "with thunderous applause", "in the Senate cafeteria", "inside this very document",
+              "if there are no solar eclipses for another year", "on Tuesdays", "on Wednesdays",
+              "on Sundays", "on Twitter", "on Facebook", "when everyone is on vacation"]
 
 function generateGender() {
 
     var preindex = Math.floor(Math.random() * prefixes.length)
     var midindex = Math.floor(Math.random() * middles.length)
     var finalindex = Math.floor(Math.random() * finals.length)
-    var preornot = Math.floor(Math.random() * 100)
-    var finalornot = Math.floor(Math.random() * 100)
-    if (preornot > 15) {
-        var word = prefixes[preindex]
-        preornot = Math.floor(Math.random() * 100)
-        if (preornot > 75) {
-            preindex = Math.floor(Math.random() * prefixes.length)
-            if (word.charAt(word.length-1) == prefixes[preindex].charAt(0)) {
-                word = word + "-" + prefixes[preindex]
-            }
-            word = word + prefixes[preindex]
-        }
-        if (word.charAt(word.length-1) == middles[midindex].charAt(0)) {
-            word = word + "-" + middles[midindex]
-        } else {
-            word = word + middles[midindex]
-        }
-        if (finalornot > 65) {
-            word = word + finals[finalindex]
-        }
-        return word
-    } else {
-        return middles[midindex] + finals[finalindex]
-    }
+    var word = prefixes[preindex]
+    word = word + " " + middles[midindex]
+    word = word + " " + finals[finalindex]
+    return word
 }
 function genderHTML() {
     var gender = generateGender()
@@ -71,8 +56,8 @@ function reassign() {
     document.getElementById("gender").innerHTML = genderHTML()
 }
 </script>
-<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/css/bootstrap.min.css" integrity="sha512-dTfge/zgoMYpP7QbHy4gWMEGsbsdZeCXz7irItjcC3sPUFtf0kuFbDz/ixG7ArTxmDjLXDmezHubeNikyKGVyQ==" crossorigin="anonymous"/>
-<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/css/bootstrap-theme.min.css" integrity="sha384-aUGj/X2zp5rLCbBxumKTCw2Z50WgIr1vs/PFN4praOTvYXWlVyh2UtNUU0KAUhAX" crossorigin="anonymous"/>
+<link rel="stylesheet" href="bootstrap.min.css"/>
+<link rel="stylesheet" href="bootstrap-theme.min.css"/>
 <style type="text/css">
 #gender, #justacceptit, #dontlikeit, #social {
     text-align: center;
