--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html>
 <head>
 <meta charset="UTF-8"/>
-<meta name="description" content="New and improved. Have you ever wished someone would tell you what your gender really is? We have The Answer."/>
+<meta name="description" content="New and improved. Have you ever wished someone would tell you what your gender really is? Allow this website to decide for you, then bring the results to your local gatekeeper."/>
 <!--------------------------------------------------------------------------------------------->
 <!-- oh hai... sorry, i'm not nearly trutrans enough for this to be good code.               -->
 <!--------------------------------------------------------------------------------------------->
@@ -23,20 +23,22 @@ var prefixes = ["the sea", "a fish", "the laughter", "the giant squid", "the tom
                 "the american novel", "the bard", "a cucumber", "the neighbor", "a god", "the goddess",
                 "a cat", "the dog", "a swarm of eyeballs", "a bee", "a beehive", "a pack of twelve artists",
                 "the source code of this document", "a piece of toast", "a stick of vegan butter",
-                "the website", "a website", "a canoe"]
+                "the website", "a website", "a canoe", "a stranglehold", "a herd of snakehounds", "a kitten"]
 
 var middles = ["laughing", "dancing", "eating christmas ornaments", "drinking wine", "writing a poem",
                "writing a novel", "learning to dance", "learning to fly", "drinking melted ice cream",
                "opposing Stalin", "starting an insurrection", "waiting tables", "cooking seitan", "starving",
                "holding a can of beans", "hysterically laughing", "that drinks", "that smells success",
-               "that has been chosen", "that watched your mother's television", "that never called me",
-               "that brushes dogs", "that wanders into supermarkets", "that stands for the letter Z"]
+               "that has been chosen", "that watches your mother's television", "that never calls me",
+               "that brushes dogs", "that wanders into supermarkets", "that stands for the letter Z",
+                "drinking lemonade", "smelling parties", "humming your country's national anthem backwards"]
 
 var finals = ["to the core", "in France", "in the dark", "when nobody is looking", "when no one else will",
               "in order to personify the laughter of hyenas", "when the world is young", "when planets die",
               "with thunderous applause", "in the Senate cafeteria", "inside this very document",
-              "if there are no solar eclipses for another year", "on Tuesdays", "on Wednesdays",
-              "on Sundays", "on Twitter", "on Facebook", "when everyone is on vacation"]
+              "when there are no solar eclipses for another year", "on Tuesdays", "on Wednesdays",
+              "on Sundays", "on Twitter", "on Facebook", "when everyone is on vacation", "in the air",
+              "in order to control the traffic", "for the good of the nation", "for fame and fortune"]
 
 function generateGender() {
 
