--- a/index.html
+++ b/index.html
@@ -7,13 +7,10 @@
 <!-- oh hai... sorry, i'm not nearly trutrans enough for this to be good code.               -->
 <!--------------------------------------------------------------------------------------------->
 <!-- the intent here is not to make fun of non-binary genders; it is to point out            -->
-<!-- the arbitrarity of gender assignment. i am a surrealist; as such, i believe every       -->
-<!-- single one of these genders literally exists, and that chance contains cosmic truth.    -->
-<!-- don't hate what you don't understand! (whether that is surrealism or non-binary gender) -->
-<!--------------------------------------------------------------------------------------------->
-<!-- i do not care what you do with this code! i literally could not care less. use it,      -->
-<!-- reuse it, subvert it, sell it, print it out, ball it up and throw it at republicans.    -->
-<!-- it makes no difference to me! just don't be a dick, k? thx!!                            -->
+<!-- the arbitrarity of gender assignment. i do not care what you do with this code! i	     -->
+<!-- literally could not care less. use it, reuse it, subvert it, sell it, print it out,     -->
+<!-- ball it up and throw it at republicans. it makes no difference to me! just don't be a   -->
+<!-- dick, k? thx!!                            						     -->
 <!--------------------------------------------------------------------------------------------->
 <title>What is my gender? 2.0</title>
 <script>
@@ -23,7 +20,8 @@ var prefixes = ["the sea", "a fish", "the laughter", "the giant squid", "the tom
                 "the american novel", "the bard", "a cucumber", "the neighbor", "a god", "the goddess",
                 "a cat", "the dog", "a swarm of eyeballs", "a bee", "a beehive", "a pack of twelve artists",
                 "the source code of this document", "a piece of toast", "a stick of vegan butter",
-                "the website", "a website", "a canoe", "a stranglehold", "a herd of snakehounds", "a kitten"]
+                "the website", "a website", "a canoe", "a stranglehold", "a herd of snakehounds", "a kitten",
+		"Peter Kropotkin", "a gender", "a blender", "a hamster", "an elderberry", "a sly cat"]
 
 var middles = ["laughing", "dancing", "eating christmas ornaments", "drinking wine", "writing a poem",
                "writing a novel", "learning to dance", "learning to fly", "drinking melted ice cream",
@@ -31,14 +29,16 @@ var middles = ["laughing", "dancing", "eating christmas ornaments", "drinking wi
                "holding a can of beans", "hysterically laughing", "that drinks", "that smells success",
                "that has been chosen", "that watches your mother's television", "that never calls me",
                "that brushes dogs", "that wanders into supermarkets", "that stands for the letter Z",
-                "drinking lemonade", "smelling parties", "humming your country's national anthem backwards"]
+                "drinking lemonade", "smelling parties", "humming your country's national anthem backwards",
+		"defying the laws of thermodynamics", "smoking cat hair", "drinking biological sex"]
 
 var finals = ["to the core", "in France", "in the dark", "when nobody is looking", "when no one else will",
               "in order to personify the laughter of hyenas", "when the world is young", "when planets die",
               "with thunderous applause", "in the Senate cafeteria", "inside this very document",
               "when there are no solar eclipses for another year", "on Tuesdays", "on Wednesdays",
               "on Sundays", "on Twitter", "on Facebook", "when everyone is on vacation", "in the air",
-              "in order to control the traffic", "for the good of the nation", "for fame and fortune"]
+              "in order to control the traffic", "for the good of the nation", "for fame and fortune",
+	      "with blatant disregard for the cowbell", "in fishnets", "without a laughtrack", "using HRT"]
 
 function generateGender() {
 
