--- a/index.html
+++ b/index.html
@@ -6,11 +6,9 @@
 <!--------------------------------------------------------------------------------------------->
 <!-- oh hai... sorry, i'm not nearly trutrans enough for this to be good code.               -->
 <!--------------------------------------------------------------------------------------------->
-<!-- the intent here is not to make fun of non-binary genders; it is to point out            -->
-<!-- the arbitrarity of gender assignment. i do not care what you do with this code! i	     -->
-<!-- literally could not care less. use it, reuse it, subvert it, sell it, print it out,     -->
-<!-- ball it up and throw it at republicans. it makes no difference to me! just don't be a   -->
-<!-- dick, k? thx!!                            						     -->
+<!-- the intent here is not to make fun of non-binary genders. people who do that are dicks. -->
+<!-- i do not care what you do with this code! i literally could not care less. just don't   -->
+<!-- be a dick, k? thx!!                            					     -->
 <!--------------------------------------------------------------------------------------------->
 <title>What is my gender? 2.0</title>
 <script>
@@ -21,7 +19,11 @@ var prefixes = ["the sea", "a fish", "the laughter", "the giant squid", "the tom
                 "a cat", "the dog", "a swarm of eyeballs", "a bee", "a beehive", "a pack of twelve artists",
                 "the source code of this document", "a piece of toast", "a stick of vegan butter",
                 "the website", "a website", "a canoe", "a stranglehold", "a herd of snakehounds", "a kitten",
-		"Peter Kropotkin", "a gender", "a blender", "a hamster", "an elderberry", "a sly cat"]
+		"Peter Kropotkin", "a giant cactus", "a blender", "a hamster", "an elderberry", "a sly cat",
+		"a penguin", "a humanoid reptile", "the Illuminati", "a sheep", "a big friendly goat",
+		"pestilence", "a bemused octopus", "the proverbial shoe", "an earring", "a floof",
+		"Maximilien Robespierre", "the gender spectrum", "a potato's gramdfather", "a butt",
+		"the language of Swiss cheese"]
 
 var middles = ["laughing", "dancing", "eating christmas ornaments", "drinking wine", "writing a poem",
                "writing a novel", "learning to dance", "learning to fly", "drinking melted ice cream",
